--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,10 +1,15 @@
 .navbar {
+    width: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-image: linear-gradient(to right top, #ccacff, #e6b0f1, #f6b7e5);
+    background-image: linear-gradient(to right top,  #b0eff1, #057a6e);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+
+.logo {
+    width: 5%;
 }
 
 .spanclass {
@@ -28,7 +33,7 @@
 }
 
 .nav-link:hover {
-    background-color: #c407f8;
+    background-color: #535353;
 }
 
 .active {
