--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,31 @@
-::root {
-    background-color: rgb(4, 4, 3);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
-    background-image: linear-gradient(to right top, #092b1e, #092a1e, #0a291f, #0a281f, #0b271f, #0c2b24, #0e2e28, #0f322d, #113c38, #124645, #135052, #155a60);
+body {
+    background-color: rgb(0, 0, 0);
+    position: relative;
+    min-height: 100vh;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgb(18, 2, 48);
+    color: white;
+    text-align: center;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.footer-icons {
+    display: flex;
+    gap: 10px;
+}
+
+.footer-icon {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
 }
