--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(0, 0, 0);
     position: relative;
     min-height: 100vh;
+    margin: 0px;
 }
 
 .footer {
@@ -28,4 +29,13 @@ body {
     color: white;
     text-decoration: none;
     font-size: 20px;
+}
+
+.lin {
+    width: 20%;
+    height: 50%;
+    background-image: linear-gradient(to bottom, #ffffff, #000000);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
